# Neuron-Network

./: .gitignore  CMakeLists.txt  Doxyfile  READ.md  README.md  RasterPlots.R
src/: ConstNetwork.cpp  ConstNetwork.h  DispNetwork.cpp  DispNetwork.h  Error.cpp  Error.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Random.cpp  Random.h  Simulation.cpp  Simulation.h  constant.h  constants.h  main.cpp  utility.h
test/: main.cpp  test_random.cpp
